--- a/modules/insurance_claim/locale/fr_FR.po
+++ b/modules/insurance_claim/locale/fr_FR.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:ins_claim.indemnification_selection:"
+msgid "Please unselect all indemnifications first"
+msgstr ""
+
 msgctxt "error:ins_claim.loss:"
 msgid "End Date is smaller than start date"
 msgstr "La date de fin est antérieure à la date de début"
@@ -13,6 +17,10 @@ msgstr "Historique"
 msgctxt "field:ins_claim.claim,claimant:"
 msgid "Claimant"
 msgstr "Déclarant"
+
+msgctxt "field:ins_claim.claim,company:"
+msgid "Company"
+msgstr "Société"
 
 msgctxt "field:ins_claim.claim,create_date:"
 msgid "Create Date"
