--- a/modules/rule_engine/locale/fr_FR.po
+++ b/modules/rule_engine/locale/fr_FR.po
@@ -41,6 +41,22 @@ msgctxt "error:rule_engine:"
 msgid "Your code has errors!"
 msgstr "L'algorithme contient des erreurs"
 
+msgctxt "field:coop_utils.export_package,contexts:"
+msgid "Contexts"
+msgstr "Contextes"
+
+msgctxt "field:coop_utils.export_package,rules:"
+msgid "Rules"
+msgstr "Règles"
+
+msgctxt "field:coop_utils.export_package,tags:"
+msgid "Tags"
+msgstr "Labels"
+
+msgctxt "field:coop_utils.export_package,tree_elements:"
+msgid "Tree Elements"
+msgstr "Eléments de l'arbre"
+
 msgctxt "field:rule_engine,code:"
 msgid "Code"
 msgstr "Code"
