--- a/modules/coop_utils/locale/fr_FR.po
+++ b/modules/coop_utils/locale/fr_FR.po
@@ -166,6 +166,10 @@ msgctxt "field:coop_utils.export_package,instances_to_export:"
 msgid "Instances to export"
 msgstr "Eléments à exporter"
 
+msgctxt "field:coop_utils.export_package,model:"
+msgid "Model"
+msgstr "Modèle"
+
 msgctxt "field:coop_utils.export_package,package_name:"
 msgid "Package Name"
 msgstr "Nom du Groupe"
